# motion_primitive_cmd

./: CMakeLists.txt  package.xml  waypoints_data.npz
scripts/: drive_pub.py  motion_primitive_cmd.py  motion_primitive_rigids.py
